# enhancedoptimaltransport

./: .gitignore  CODE_REVIEW.md  README.html  README.md  README_STM32N6.md  analyze_drift.py  app_context.py  app_processor.py  app_streamlit.py  app_swarm.py  appmain.py  appmain_display.py  appmain_tk.py  checkpoint_backup.sh  code_explanation.md  colab.txt  config.py  data_management.py  data_manager.py  debug_checkpoints.py  deploy_to_stm32n6.sh  export_all_labels.py  export_for_stm32.py  force_export.py  generate_calibration_data.py  gpu_utils.py  inference.py  kill_gpu_procs.sh  label_map.json  lora.py  main.py  migrate_to_hybrid.py  migrate_to_subpixel.py  models.py  onnx_generate_image.html  onnx_inference_tester.html  onnx_static_debug.html  optimized_text_encoder_plan.md  patch_checkpoint.py  patch_html_dims.py  (+16 more)
enhanced_label_sb/onnx/: label_embeddings.json
opencl/: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  build_and_run_pi5.sh  dsp_imp.cl  dsp_porting.md  setup_env.sh  setup_pi5.sh  vulkan_opencl_app.cpp
opencl/runtime/: CMakeLists.txt  MATH_SPEC.md  build_and_run_pi5.sh  export_onnx_assets.py  numpy_walker.py
opencl/runtime/src/: logger.hpp  main.cpp  manifest.hpp  onnx_kernels.cl  runtime.cpp  runtime.hpp  tensor.hpp
openvhdl/: README.md  dsp_accelerator.vhd  dsp_accelerator_tb.vhd  install_tools.sh  raw_to_png.py  run_full_test.sh  sim_hdl.sh  work-obj08.cf
plans/: consistency_verification.md  detailed_dimensional_plan.md  neural_vs_wordpiece_comparison.md  shared_embedding_network_plan.md
st_ai_output/: network.c  network.h  network_c_info.json  network_details.h  network_generate_report.txt
stm32n6_app/: BUILD_GUIDE.md  Makefile
stm32n6_app/App/: app_ai_display.c  app_ai_display.h
stm32n6_app/Core/Inc/: main.h
stm32n6_app/Core/Src/: main.c
stm32n6_app/Linker/: STM32N6570_APP.ld
